--- a/index.html
+++ b/index.html
@@ -23,7 +23,220 @@
 
 <body>
 
-    <h1>Hello MealDB</h1>
+    <header class="header">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-sm-12 col-md-6 col-lg-2">
+                    <a href="#" class="logo">
+                        <h2 class="text-logo">Tasty HUT</h2>
+                    </a>
+                </div>
+                <div class="col-12 col-sm-12 col-md-6 col-lg-10 text-end">
+                    <nav>
+                        <button id="btn-signup" type="button" class="btn btn-warning fw-bold">Sign Up</button>
+                    </nav>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <main class="main">
+        <section class="section-banner">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 offset-lg-2 text-center banner">
+                        <div class="banner-text-box">
+                            <h1>Taste Our Delicious Best Foods</h1>
+                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have
+                                suffered alteration in some form, by injected humou.</p>
+                            <div class="form-container d-flex">
+                                <input type="text" name="search-food-field" id="search-food-field"
+                                    placeholder="Search any food">
+                                <button id="btn-search" class="btn btn-warning fw-bold">Search</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="section-food-card">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 offset-lg-2 text-center">
+                        <h2 class="section-headline">Your Favorite Food</h2>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 col-sm-12 col-md-6 col-lg-6">
+                        <div class="card mb-4 pe-4">
+                            <div class="row g-0 card-clip align-items-center">
+                                <div class="col-md-4">
+                                    <img src="img/meal-1.png" class="img-fluid rounded-start" alt="...">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h3 class="card-title">Chicken Handi</h3>
+                                        <p class="card-text">There are many variations of passages of available, but the
+                                            majority have suffered</p>
+                                        <a href="#"
+                                            class="card-link text-warning fw-bold text-decoration-underline">View
+                                            Details</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-sm-12 col-md-6 col-lg-6">
+                        <div class="card mb-4 pe-4">
+                            <div class="row g-0 card-clip align-items-center">
+                                <div class="col-md-4">
+                                    <img src="img/meal-2.png" class="img-fluid rounded-start" alt="...">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h3 class="card-title">Chicken Handi</h3>
+                                        <p class="card-text">There are many variations of passages of available, but the
+                                            majority have suffered</p>
+                                        <a href="#"
+                                            class="card-link text-warning fw-bold text-decoration-underline">View
+                                            Details</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-sm-12 col-md-6 col-lg-6">
+                        <div class="card mb-4 pe-4">
+                            <div class="row g-0 card-clip align-items-center">
+                                <div class="col-md-4">
+                                    <img src="img/meal-3.png" class="img-fluid rounded-start" alt="...">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h3 class="card-title">Chicken Handi</h3>
+                                        <p class="card-text">There are many variations of passages of available, but the
+                                            majority have suffered</p>
+                                        <a href="#"
+                                            class="card-link text-warning fw-bold text-decoration-underline">View
+                                            Details</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-sm-12 col-md-6 col-lg-6">
+                        <div class="card mb-4 pe-4">
+                            <div class="row g-0 card-clip align-items-center">
+                                <div class="col-md-4">
+                                    <img src="img/meal-4.png" class="img-fluid rounded-start" alt="...">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h3 class="card-title">Chicken Handi</h3>
+                                        <p class="card-text">There are many variations of passages of available, but the
+                                            majority have suffered</p>
+                                        <a href="#"
+                                            class="card-link text-warning fw-bold text-decoration-underline">View
+                                            Details</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-sm-12 col-md-6 col-lg-6">
+                        <div class="card mb-4 pe-4">
+                            <div class="row g-0 card-clip align-items-center">
+                                <div class="col-md-4">
+                                    <img src="img/meal-5.png" class="img-fluid rounded-start" alt="...">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h3 class="card-title">Chicken Handi</h3>
+                                        <p class="card-text">There are many variations of passages of available, but the
+                                            majority have suffered</p>
+                                        <a href="#"
+                                            class="card-link text-warning fw-bold text-decoration-underline">View
+                                            Details</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-sm-12 col-md-6 col-lg-6">
+                        <div class="card mb-4 pe-4">
+                            <div class="row g-0 card-clip align-items-center">
+                                <div class="col-md-4">
+                                    <img src="img/meal-6.png" class="img-fluid rounded-start" alt="...">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h3 class="card-title">Chicken Handi</h3>
+                                        <p class="card-text">There are many variations of passages of available, but the
+                                            majority have suffered</p>
+                                        <a href="#"
+                                            class="card-link text-warning fw-bold text-decoration-underline">View
+                                            Details</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-4 offset-lg-4 text-center">
+                        <button id="btn-show-all" type="button" class="btn btn-warning fw-bold">
+                            Show All
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <footer class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-6 col-sm-6 col-md-3 col-lg-2">
+                    <h4>Section</h4>
+                    <ul class="footer-nav">
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Features</a></li>
+                        <li><a href="#">Pricing</a></li>
+                        <li><a href="#">FAQs</a></li>
+                        <li><a href="#">About</a></li>
+                    </ul>
+                </div>
+                <div class="col-6 col-sm-6 col-md-3 col-lg-3">
+                    <h4>Section</h4>
+                    <ul class="footer-nav">
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Features</a></li>
+                        <li><a href="#">Pricing</a></li>
+                        <li><a href="#">FAQs</a></li>
+                        <li><a href="#">About</a></li>
+                    </ul>
+                </div>
+                <div class="col-6 col-sm-6 col-md-3 col-lg-3">
+                    <h4>Section</h4>
+                    <ul class="footer-nav">
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Features</a></li>
+                        <li><a href="#">Pricing</a></li>
+                        <li><a href="#">FAQs</a></li>
+                        <li><a href="#">About</a></li>
+                    </ul>
+                </div>
+                <div class="col-6 col-sm-6 col-md-3 col-lg-4">
+                    <h4>Subscribe to our newsletter</h4>
+                    <p>There are many variations of passages of available, but the majority have suffered</p>
+                    <div class="subscribe-form d-flex">
+                        <input type="email" name="email" id="email">
+                        <button id="btn-subscribe" class="btn btn-warning" type="submit">Subscribe</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <!-- JS -->
     <script src="js/bootstrap.min.js"></script>
