--- a/index.html
+++ b/index.html
@@ -22,18 +22,17 @@
 </head>
 
 <body>
-
     <header class="header">
         <div class="container">
-            <div class="row">
+            <div class="row py-4 align-items-center">
                 <div class="col-12 col-sm-12 col-md-6 col-lg-2">
                     <a href="#" class="logo">
-                        <h2 class="text-logo">Tasty HUT</h2>
+                        <h2 class="text-logo fw-bold">Tasty HUT</h2>
                     </a>
                 </div>
                 <div class="col-12 col-sm-12 col-md-6 col-lg-10 text-end">
                     <nav>
-                        <button id="btn-signup" type="button" class="btn btn-warning fw-bold">Sign Up</button>
+                        <button id="btn-signup" type="button" class="btn btn-warning fw-bold px-4 py-3">Sign Up</button>
                     </nav>
                 </div>
             </div>
@@ -41,18 +40,18 @@
     </header>
 
     <main class="main">
-        <section class="section-banner">
+        <section class="section-banner d-flex align-items-center justify-content-center">
             <div class="container">
-                <div class="row">
-                    <div class="col-lg-8 offset-lg-2 text-center banner">
+                <div class="row align-items-center justify-content-center">
+                    <div class="col-lg-8 offset-lg-1 text-center banner">
                         <div class="banner-text-box">
-                            <h1>Taste Our Delicious Best Foods</h1>
-                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have
+                            <h1 class="fw-bold text-white banner-headline mb-5">Taste Our Delicious Best Foods</h1>
+                            <p class="text-white banner-description mb-5">There are many variations of passages of Lorem Ipsum available, but the majority have
                                 suffered alteration in some form, by injected humou.</p>
                             <div class="form-container d-flex">
                                 <input type="text" name="search-food-field" id="search-food-field"
                                     placeholder="Search any food">
-                                <button id="btn-search" class="btn btn-warning fw-bold">Search</button>
+                                <button id="btn-search" class="btn btn-warning px-5 fw-bold">Search</button>
                             </div>
                         </div>
                     </div>
