--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
                     <div class="col-lg-8 offset-lg-1 text-center banner">
                         <div class="banner-text-box">
                             <h1 class="fw-bold text-white banner-headline mb-5">Taste Our Delicious Best Foods</h1>
-                            <p class="text-white banner-description mb-5">There are many variations of passages of Lorem Ipsum available, but the majority have
+                            <p class="text-white banner-description mb-5">There are many variations of passages of Lorem
+                                Ipsum available, but the majority have
                                 suffered alteration in some form, by injected humou.</p>
                             <div class="form-container d-flex">
                                 <input type="text" name="search-food-field" id="search-food-field"
@@ -58,14 +59,14 @@
                 </div>
             </div>
         </section>
-        <section class="section-food-card">
+        <section class="section-padding section-food-card">
             <div class="container">
-                <div class="row">
+                <div class="row mb-5">
                     <div class="col-lg-8 offset-lg-2 text-center">
-                        <h2 class="section-headline">Your Favorite Food</h2>
+                        <h2 class="section-headline fw-semibold">Your Favorite Food</h2>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row mb-5">
                     <div class="col-12 col-sm-12 col-md-6 col-lg-6">
                         <div class="card mb-4 pe-4">
                             <div class="row g-0 card-clip align-items-center">
@@ -74,10 +75,11 @@
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
-                                        <h3 class="card-title">Chicken Handi</h3>
-                                        <p class="card-text">There are many variations of passages of available, but the
+                                        <h3 class="card-title fw-bold">Chicken Handi</h3>
+                                        <p class="card-text mb-4">There are many variations of passages of available,
+                                            but the
                                             majority have suffered</p>
-                                        <a href="#"
+                                        <a href="#" id="food-details"
                                             class="card-link text-warning fw-bold text-decoration-underline">View
                                             Details</a>
                                     </div>
@@ -93,10 +95,11 @@
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
-                                        <h3 class="card-title">Chicken Handi</h3>
-                                        <p class="card-text">There are many variations of passages of available, but the
+                                        <h3 class="card-title fw-bold">Chicken Handi</h3>
+                                        <p class="card-text mb-4">There are many variations of passages of available,
+                                            but the
                                             majority have suffered</p>
-                                        <a href="#"
+                                        <a href="#" id="food-details"
                                             class="card-link text-warning fw-bold text-decoration-underline">View
                                             Details</a>
                                     </div>
@@ -112,10 +115,11 @@
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
-                                        <h3 class="card-title">Chicken Handi</h3>
-                                        <p class="card-text">There are many variations of passages of available, but the
+                                        <h3 class="card-title fw-bold">Chicken Handi</h3>
+                                        <p class="card-text mb-4">There are many variations of passages of available,
+                                            but the
                                             majority have suffered</p>
-                                        <a href="#"
+                                        <a href="#" id="food-details"
                                             class="card-link text-warning fw-bold text-decoration-underline">View
                                             Details</a>
                                     </div>
@@ -131,10 +135,11 @@
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
-                                        <h3 class="card-title">Chicken Handi</h3>
-                                        <p class="card-text">There are many variations of passages of available, but the
+                                        <h3 class="card-title fw-bold">Chicken Handi</h3>
+                                        <p class="card-text mb-4">There are many variations of passages of available,
+                                            but the
                                             majority have suffered</p>
-                                        <a href="#"
+                                        <a href="#" id="food-details"
                                             class="card-link text-warning fw-bold text-decoration-underline">View
                                             Details</a>
                                     </div>
@@ -150,10 +155,11 @@
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
-                                        <h3 class="card-title">Chicken Handi</h3>
-                                        <p class="card-text">There are many variations of passages of available, but the
+                                        <h3 class="card-title fw-bold">Chicken Handi</h3>
+                                        <p class="card-text mb-4">There are many variations of passages of available,
+                                            but the
                                             majority have suffered</p>
-                                        <a href="#"
+                                        <a href="#" id="food-details"
                                             class="card-link text-warning fw-bold text-decoration-underline">View
                                             Details</a>
                                     </div>
@@ -169,10 +175,11 @@
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
-                                        <h3 class="card-title">Chicken Handi</h3>
-                                        <p class="card-text">There are many variations of passages of available, but the
+                                        <h3 class="card-title fw-bold">Chicken Handi</h3>
+                                        <p class="card-text mb-4">There are many variations of passages of available,
+                                            but the
                                             majority have suffered</p>
-                                        <a href="#"
+                                        <a href="#" id="food-details"
                                             class="card-link text-warning fw-bold text-decoration-underline">View
                                             Details</a>
                                     </div>
@@ -183,7 +190,7 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-4 offset-lg-4 text-center">
-                        <button id="btn-show-all" type="button" class="btn btn-warning fw-bold">
+                        <button id="btn-show-all" type="button" class="btn btn-warning fw-bold px-4 py-3">
                             Show All
                         </button>
                     </div>
@@ -196,7 +203,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-6 col-sm-6 col-md-3 col-lg-2">
-                    <h4>Section</h4>
+                    <h4 class="headline-footer fw-bold">Section</h4>
                     <ul class="footer-nav">
                         <li><a href="#">Home</a></li>
                         <li><a href="#">Features</a></li>
@@ -206,7 +213,7 @@
                     </ul>
                 </div>
                 <div class="col-6 col-sm-6 col-md-3 col-lg-3">
-                    <h4>Section</h4>
+                    <h4 class="headline-footer fw-bold">Section</h4>
                     <ul class="footer-nav">
                         <li><a href="#">Home</a></li>
                         <li><a href="#">Features</a></li>
@@ -216,7 +223,7 @@
                     </ul>
                 </div>
                 <div class="col-6 col-sm-6 col-md-3 col-lg-3">
-                    <h4>Section</h4>
+                    <h4 class="headline-footer fw-bold">Section</h4>
                     <ul class="footer-nav">
                         <li><a href="#">Home</a></li>
                         <li><a href="#">Features</a></li>
@@ -226,11 +233,13 @@
                     </ul>
                 </div>
                 <div class="col-6 col-sm-6 col-md-3 col-lg-4">
-                    <h4>Subscribe to our newsletter</h4>
-                    <p>There are many variations of passages of available, but the majority have suffered</p>
-                    <div class="subscribe-form d-flex">
-                        <input type="email" name="email" id="email">
-                        <button id="btn-subscribe" class="btn btn-warning" type="submit">Subscribe</button>
+                    <h4 class="headline-footer fw-bold mb-5">Subscribe to our newsletter</h4>
+                    <p class="subscribe-text mb-4">There are many variations of passages of available, but the majority
+                        have suffered</p>
+                    <div class="subscribe-form d-flex gap-3">
+                        <input type="email" name="email" id="email" class="form-control" placeholder="Email Address">
+                        <button id="btn-subscribe" class="btn btn-warning fw-bold px-4 py-3"
+                            type="submit">Subscribe</button>
                     </div>
                 </div>
             </div>
